# dj-tools

./: .gitignore  DJ Card Printing tips.txt  README.md  hello.py  pyproject.toml
data/track_history/: 2025-01-29@22:44.parquet  2025-02-08@11:03.parquet
src/dj_tools/: add_ids.py  card_layout.py  cards.py  field_layout.py  image_manipulation.py  key_conversion.py  metadata_extraction.py  scanner.py  utils.py  version_history.py
