[project]
name = "dj-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "opencv-python>=4.11.0.86",
    "pyperclip>=1.9.0",
    "pyzbar>=0.1.9",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scanner = "dj_tools.scanner:scan_qr_code"
cards = "dj_tools.cards:main"
