[project]
name = "dj-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "mutagen>=1.47.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=8.0",
    "reportlab>=4.2.5",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scanner = "dj_tools.scanner:scan_qr_code"
cards = "dj_tools.cards:main"
add_ids = "dj_tools.add_ids:main"
